<resources>
    <string name="app_name">My Application</string>
    <string name="StringSecret">Secret</string>
    <string name="of_shares"># of Shares</string>
    <string name="threshold">Threshold</string>
    <string name="generate_shares">Generate Shares</string>
    <string name="of_input_shares"># of Input Shares</string>
    <string name="which_share">Which Share</string>
    <string name="secret_generated">Secret Generated</string>
    <string name="input">Input</string>
    <string name="generate_secret">Generate Secret</string>
</resources>
